Update flexpane and header styles

--- a/scss/modules/flexpane/_base.scss
+++ b/scss/modules/flexpane/_base.scss
@@ -10,7 +10,7 @@
   }
 
   .heading {
-    background: $color-base;
+    background: lighten($color-shade-darkest, 10%);
     color: $base-link-color;
 
     a {
