--- a/scss/modules/flexpane/_channel.scss
+++ b/scss/modules/flexpane/_channel.scss
@@ -37,6 +37,10 @@
       }
     }
 
+    .section_title {
+      color: $base-font-color;
+    }
+
     .disclosure_triangle {
       color: $base-link-color;
     }
