Set input font color for threads (fixes #102)

--- a/scss/modules/flexpane/_threads.scss
+++ b/scss/modules/flexpane/_threads.scss
@@ -15,6 +15,7 @@
     .message_input div,
     textarea {
       border-color: $color-shade-dark;
+      color: $base-font-color;
 
       &:active,
       &:focus {
