--- a/scss/modules/flexpane/_team.scss
+++ b/scss/modules/flexpane/_team.scss
@@ -1,10 +1,10 @@
-#member_preview_scroller a:not(.member_name),
-.team_list_item a:not(.member_name) {
+#member_preview_scroller a:not(.member_name):not(.current_status_preset_option),
+.team_list_item a:not(.member_name):not(.current_status_preset_option) {
   color: $base-link-color;
-}
 
-#member_preview_scroller a:not(.member_name):hover {
-  color: $base-link-color-active;
+  &:hover {
+    color: $base-link-color-active;
+  }
 }
 
 #member_preview_scroller,
@@ -119,10 +119,6 @@
 .team_list_item {
   border-top: 1px solid $color-shade-light;
   color: $base-link-color;
-
-  a:not(.member_name):hover {
-    color: $base-link-color-active;
-  }
 
   .member_name {
     color: $base-font-color;
