--- a/scss/pages/_website.scss
+++ b/scss/pages/_website.scss
@@ -273,16 +273,6 @@ html.no_touch {
   }
 }
 
-.feature_new_team_sites {
-  #all_time,
-  #third_row.column,
-  #second_row.column {
-    background: $color-shade-dark;
-    border: 1px solid $color-shade-darkest;
-    color: $base-font-color;
-  }
-}
-
 .tab_actions {
   background: $color-shade-dark;
   border: 1px solid $color-shade-darkest;
@@ -294,69 +284,6 @@ html.no_touch {
 
   &:active {
     border-bottom: 1px solid $color-base !important;
-  }
-}
-
-#user_groups_pane .mention {
-  background: rgba($color-red, 0.25);
-  border: 0;
-  border-radius: 3px;
-  padding: 2px;
-}
-
-#user_groups_container {
-  .info_panel {
-    background: $color-base;
-    border: 1px solid $color-shade-light;
-  }
-
-  .mention {
-    background-color: rgba($color-red, 0.25) !important;
-  }
-}
-
-#user_groups_header {
-  .user_groups_search .icon_search {
-    color: $color-highlight;
-  }
-
-  a.icon_close {
-    color: $base-link-color;
-
-    &:hover {
-      color: $base-link-color-active;
-    }
-  }
-}
-
-.user_group_item {
-  border-bottom: 1px solid $color-shade-light;
-
-  a {
-    color: $base-link-color;
-  }
-}
-
-#flex_contents .user_group_item {
-  &:hover {
-    background-color: $color-base;
-
-    h4 {
-      color: $base-font-color;
-    }
-  }
-}
-
-.user_group_invite_member_small {
-  .add_icon {
-    color: $color-highlight;
-  }
-}
-
-#user_group_member_invite_div {
-  .disabled .fsl_item.fsl_token {
-    background-color: $color-shade-lightest;
-    border-color: $color-shade-lightest;
   }
 }
 
@@ -374,117 +301,7 @@ html.no_touch {
   }
 }
 
-.admin_list_item {
-  border-bottom: 1px solid $color-base;
-  color: $base-font-color;
-
-  &:hover {
-    background-color: $color-shade-dark;
-  }
-
-  .pill.group {
-    background: $color-shade-mid;
-  }
-
-  .admin_member_type,
-  .admin_member_caret {
-    color: $color-highlight;
-  }
-
-  .admin_member_real_name {
-    color: $base-font-color;
-  }
-
-  .two_factor_auth_badge:hover {
-    background: $color-shade-mid;
-  }
-
-  &.expanded {
-    .btn_outline {
-      border: 1px solid $color-base;
-      color: $base-font-color !important;
-
-      &:hover {
-        border: 1px solid $color-shade-dark;
-        color: $base-font-color !important;
-      }
-    }
-
-    .sub_action {
-      color: $base-link-color;
-
-      &:hover {
-        color: $base-link-color-active;
-      }
-    }
-  }
-
-  &.expanded,
-  &.success,
-  &.processing,
-  &.error {
-    background-color: $color-base;
-  }
-
-  &.inactive {
-    background: $color-shade-mid;
-  }
-
-  .inline_name:hover,
-  .inline_email:hover,
-  .inline_username:hover {
-    background: none !important;
-    color: $base-link-color-active;
-    text-decoration: underline;
-  }
-
-  &.invite_item.bouncing {
-    background: $color-shade-lightest;
-
-    .email {
-      color: $color-red;
-    }
-  }
-}
-
-.notice_error,
-.notice_processing {
-  color: $base-font-color;
-  text-shadow: 0 1px 1px $color-shadow-medium;
-}
-
-.notice_success {
-  color: $base-font-color;
-  text-shadow: 0 1px 1px $color-shadow-medium;
-
-  a.undo_link {
-    color: $base-link-color;
-
-    &:hover {
-      color: $base-link-color-active;
-    }
-  }
-}
-
-.restriction_option {
-  background: $color-shade-mid;
-  color: $base-font-color;
-
-  &:hover {
-    background: $color-shade-darkest;
-
-    .ts_icon_arrow_right {
-      color: $base-link-color-active;
-    }
-  }
-
-  .ts_icon_arrow_right {
-    color: $base-link-color;
-  }
-}
-
 #page pre,
-.backup_codes_wrapper,
 body > pre {
   color: $black;
 }
@@ -539,8 +356,7 @@ header #header_team_nav #add_team_option {
   border-top: 1px solid $color-shade-darkest;
 }
 
-.inactive,
-#page_contents .invite_form_column {
+.inactive {
   background-image: none;
 }
 
@@ -562,27 +378,19 @@ footer {
   color: $base-font-color;
 }
 
-.radio_selection,
 .billing_selection {
   border: 2px solid $color-shade-darkest;
   color: $base-font-color !important;
   text-shadow: 0 1px 1px $color-shadow-dark;
-}
 
-.radio_selection .mini,
-.slate_blue {
-  color: $base-font-color !important;
-}
+  &:hover {
+    border-color: $color-shade-darkest;
+  }
 
-.radio_selection:hover,
-.billing_selection:hover {
-  border-color: $color-shade-darkest;
-}
-
-.radio_selection.active,
-.billing_selection.active {
-  background: $color-shade-light;
-  border-color: $color-shade-dark;
+  &.active {
+    background: $color-shade-light;
+    border-color: $color-shade-dark;
+  }
 }
 
 table tr:first-child th:not(:only-of-type) {
@@ -594,20 +402,7 @@ table tr:first-child th:not(:only-of-type) {
   color: $color-highlight;
 }
 
-.subtle_silver,
 .log_meta {
-  color: $color-highlight !important;
-}
-
-.service_group {
-  a:hover,
-  &:hover a {
-    color: $base-link-color !important;
-  }
-}
-
-.burnt_violet,
-.severe_grey {
   color: $color-highlight !important;
 }
 
@@ -720,7 +515,6 @@ header #header_logo {
   display: none;
 }
 
-.service_group a,
 .file_actions_cog {
   color: $base-link-color !important;
 }
@@ -955,39 +749,9 @@ a.two_factor_choice {
   }
 }
 
-#custom_emoji span.emoji-wrapper {
-  background-color: $color-shade-dark;
-}
-
 @keyframes highlight_fade {
   from { background-color: $color-shade-mid; }
   to { background-color: $color-shade-dark; }
-}
-
-#channel_specific_settings {
-  tr {
-    border-top: 1px solid $color-shade-light;
-
-    &.channel_override_row.muted td {
-      background: $color-shade-dark;
-    }
-  }
-
-  .extra_left_border {
-    border-left: 3px solid $color-shade-light;
-  }
-
-  .extra_right_border {
-    border-right: 3px solid $color-shade-light;
-  }
-
-  .revert_to_default {
-    color: $color-highlight;
-
-    &:hover {
-      color: $color-red;
-    }
-  }
 }
 
 #page_contents .card {
@@ -996,14 +760,34 @@ a.two_factor_choice {
   p {
     text-shadow: 0 0 1px $color-shadow-dark;
   }
-
-  .mustard_yellow {
-    color: $color-red !important;
-  }
 }
 
 @media only screen and (min-width: 1441px) {
   .widescreen:not(.nav_open) nav#site_nav {
     background: rgba($color-base, 0.9);
+  }
+}
+
+.tooltip-inner {
+  background-color: $color-shade-lightest;
+  color: $base-font-color;
+}
+
+.tooltip {
+  &.top .tooltip-arrow,
+  &.top-left .tooltip-arrow {
+    border-top-color: $color-shade-lightest;
+  }
+
+  &.right .tooltip-arrow {
+    border-right-color: $color-shade-lightest;
+  }
+
+  &.left .tooltip-arrow {
+    border-left-color: $color-shade-lightest;
+  }
+
+  &.bottom .tooltip-arrow {
+    border-bottom-color: $color-shade-lightest;
   }
 }
