--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,72 +4,69 @@
   @import "helpers/mixins";
 
   @import "layout/base";
-  @import "layout/sidebar";
   @import "layout/monkey-scroll";
+  @import "layout/sidebar";
 
   @import "modules/loader";
 
   @import "modules/inputs/base";
-  @import "modules/inputs/chzn";
   @import "modules/inputs/filter-select";
   @import "modules/inputs/messaging";
   @import "modules/inputs/toggle";
 
   @import "modules/menu/base";
-  @import "modules/menu/team";
-  @import "modules/menu/file";
-  @import "modules/menu/popover";
-  @import "modules/menu/calendar";
   @import "modules/menu/autocomplete";
-  @import "modules/menu/tabcomplete";
-  @import "modules/menu/flex";
-  @import "modules/menu/filters";
+  @import "modules/menu/calendar";
   @import "modules/menu/direct-messaging";
+  @import "modules/menu/filters";
+  @import "modules/menu/popover";
+  @import "modules/menu/tabcomplete";
+  @import "modules/menu/team";
 
   @import "modules/header/base";
-  @import "modules/header/search";
-  @import "modules/header/day-divider";
   @import "modules/header/banners";
+  @import "modules/header/day-divider";
+  @import "modules/header/search";
   @import "modules/header/topic-editor";
 
   @import "modules/messaging/base";
-  @import "modules/messaging/light";
-  @import "modules/messaging/dense";
-  @import "modules/messaging/overlay";
-  @import "modules/messaging/banners";
   @import "modules/messaging/attachments";
-  @import "modules/messaging/threads";
-  @import "modules/messaging/quotes";
+  @import "modules/messaging/banners";
   @import "modules/messaging/code";
+  @import "modules/messaging/dense";
+  @import "modules/messaging/light";
+  @import "modules/messaging/overlay";
+  @import "modules/messaging/quotes";
+  @import "modules/messaging/threads";
   @import "modules/messaging/unreads";
 
   @import "modules/flexpane/base";
   @import "modules/flexpane/channel";
-  @import "modules/flexpane/threads";
-  @import "modules/flexpane/search";
+  @import "modules/flexpane/files";
+  @import "modules/flexpane/groups";
   @import "modules/flexpane/mentions";
   @import "modules/flexpane/reactions";
-  @import "modules/flexpane/files";
+  @import "modules/flexpane/search";
   @import "modules/flexpane/team";
+  @import "modules/flexpane/threads";
   @import "modules/flexpane/whats-new";
 
   @import "modules/emojis/base";
   @import "modules/emojis/reactions";
 
   @import "modules/modals/base";
+  @import "modules/modals/call";
   @import "modules/modals/channel";
   @import "modules/modals/channels";
   @import "modules/modals/direct-messages";
   @import "modules/modals/file";
-  @import "modules/modals/profile";
-  @import "modules/modals/preferences";
-  @import "modules/modals/invite";
-  @import "modules/modals/omnibox";
-  @import "modules/modals/share";
-  @import "modules/modals/quick-search";
-  @import "modules/modals/call";
   @import "modules/modals/help";
+  @import "modules/modals/invite";
   @import "modules/modals/keyboard-shortcuts";
+  @import "modules/modals/preferences";
+  @import "modules/modals/profile";
+  @import "modules/modals/quick-search";
+  @import "modules/modals/share";
 
   @import "modules/tooltips/base";
   @import "modules/tooltips/coachmarks";
@@ -83,8 +80,8 @@
   @import "pages/oauth";
   @import "pages/pricing";
   @import "pages/spaces";
-  @import "pages/website";
-  @import "pages/status";
   @import "pages/split";
+  @import "pages/status";
+  @import "pages/website";
 
 }
