--- a/scss/modules/menu/_base.scss
+++ b/scss/modules/menu/_base.scss
@@ -121,4 +121,22 @@
       border-top: 1px solid $color-shade-dark;
     }
   }
+
+  #monkey_scroll_wrapper_for_menu_items_scroller {
+    background: $color-shade-dark;
+  }
+
+  #menu_list_container {
+    #menu_list .menu_list_item {
+      a {
+        color: $base-font-color;
+      }
+
+      &.active a {
+        background: $color-shade-light;
+        color: $base-font-color;
+        text-shadow: 0 1px 0 $color-shadow-light;
+      }
+    }
+  }
 }
