--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,7 @@
   @import "helpers/mixins";
 
   @import "layout/base";
-  @import "layout/monkey-scroll";
+  @import "layout/scrollbar";
   @import "layout/sidebar";
 
   @import "modules/loader";
