Organize alert styles

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
   @import "helpers/mixins";
 
   @import "layout/base";
+  @import "layout/alerts";
   @import "layout/scrollbar";
   @import "layout/sidebar";
 
