--- a/scss/modules/pages/_apps.scss
+++ b/scss/modules/pages/_apps.scss
@@ -1,4 +1,73 @@
+.menu_launcher,
+.menu_launcher_large {
+  background-color: $color-shade-light;
+  border: 1px solid $color-base;
+  color: $base-font-color;
+}
+
+.menu_launcher_large {
+  border: 1px solid $color-base;
+}
+
+.menu.avatar_menu ul li {
+  &:hover ts-icon {
+    background: $color-shade-light;
+    color: $base-font-color;
+  }
+
+  a {
+    color: $base-font-color;
+
+    img,
+    ts-icon {
+      background-color: $color-shade-light;
+      color: $base-font-color;
+    }
+  }
+}
+
 #page {
+  .media_list {
+    background-color: $color-shade-dark;
+    border: 1px solid $color-shade-light;
+
+    > li {
+      + li::before {
+        border-top: 1px solid $color-shade-light;
+      }
+
+      &.interactive {
+        a {
+          color: $base-font-color;
+
+          &:focus,
+          &:hover {
+            background: $color-shade-light;
+            border-color: $color-shade-lightest;
+          }
+        }
+      }
+
+      .media_list_text {
+        color: $base-font-color;
+      }
+    }
+
+    &.media_list_with_arrows a {
+      &::before {
+        color: $color-highlight;
+      }
+    }
+  }
+
+  .media_list_title {
+    color: $base-font-color;
+  }
+
+  .media_list_subtitle {
+    color: $color-highlight;
+  }
+
   .sidebar_menu_list_item {
     color: $base-font-color;
 
@@ -75,25 +144,31 @@
   }
 }
 
-nav.top.apps_nav {
-  background: transparent;
-
-  &.persistent .nav_title {
-    border-color: $color-shade-light;
-  }
-
-  &.clear_nav {
-    .nav_title a {
-      color: $base-font-color;
-    }
-  }
-
-  .nav_title a {
+nav.top {
+  &.persistent ul a {
     color: $base-font-color;
   }
 
-  ul a.active {
-    color: $base-link-color-active;
+  &.apps_nav {
+    background: transparent;
+
+    &.persistent .nav_title {
+      border-color: $color-shade-lightest;
+    }
+
+    &.clear_nav {
+      .nav_title a {
+        color: $base-font-color;
+      }
+    }
+
+    .nav_title a {
+      color: $base-font-color;
+    }
+
+    ul a.active {
+      color: $base-link-color-active;
+    }
   }
 }
 
@@ -151,5 +226,25 @@ a.plastic_typeahead_item {
 }
 
 .icon_search_input {
+  color: $color-highlight;
+}
+
+.quote_block {
+  color: $base-font-color;
+
+  &::before {
+    background-color: $color-shade-light;
+  }
+}
+
+.well {
+  background: $color-shade-darkest;
+  border-color: darken($color-shade-darkest, 2%);
+  color: $base-font-color;
+  text-shadow: 0 1px 1px $color-shadow-dark;
+}
+
+.service_breadcrumbs li .ts_icon,
+.service_breadcrumbs li span {
   color: $color-highlight;
 }
