Correct flexpane thread styles

--- a/scss/modules/flexpane/_threads.scss
+++ b/scss/modules/flexpane/_threads.scss
@@ -39,11 +39,17 @@
 }
 
 
-#convo_container .convo_flexpane_divider {
-  border-top: 1px solid $color-shade-dark;
-  color: $color-highlight;
+#convo_container {
+  .convo_flexpane_divider {
+    border-top-color: $color-shade-dark;
+    color: $color-highlight;
 
-  .reply_count {
-    background: $color-base;
+    .reply_count {
+      background: $color-base;
+    }
+  }
+
+  ts-conversation ts-message.selected .message_content .thread_channel_link {
+    color: $base-link-color;
   }
 }
