Improve team menu styles

--- a/scss/modules/menu/_team.scss
+++ b/scss/modules/menu/_team.scss
@@ -44,7 +44,7 @@
 }
 
 .slack_menu_section::before {
-  border-top: 1px solid $color-shade-light;
+  border-top-color: $color-base;
 }
 
 .slack_menu_header_secondary {
