Add style for bot labels in pinned message modal

--- a/scss/modules/modals/_base.scss
+++ b/scss/modules/modals/_base.scss
@@ -84,3 +84,8 @@
     background-color: $color-shade-dark;
   }
 }
+
+.bot_label {
+  background: $color-shade-darkest;
+  color: $color-highlight;
+}
